# estudio-inmobiliario-amba

./: .gitignore  CHANGELOG.md  CHEATSHEET.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANUAL.md  README.md  README_INMOBILIARIO.md  README_PUBLICACION_IG.md  SECURITY.md  TOPICS.md  TROUBLESHOOTING.md  WORKFLOW_PRIMER_POST.md  antes_despues.py  app_config.py  app_logging.py  auth_instagram_example.json  calendario_editorial.py  caption_variants.py  captions_instagram.json  carruseles.py  cloudinary_upload.py  email_notifier.py  generar_carruseles_ejemplo.py  generar_proyecto_ejemplo.py  generate_pdf.py  generation_pipeline.py  historial_publicaciones.py  image_generator.py  instagram_auth.py  instagram_publisher.py  mejora_fotos.py  mercadolibre_publisher.py  preview_html.py  prompts_inmobiliarios.json  publishing.py  pyproject.toml  realestate_studio.py  (+5 more)
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: lint.yml  release.yml  test.yml
cerebro/: __init__.py  __main__.py  cerebro.py  curator.py  frame_analyzer.py  prompt_database.py  video_extractor.py
config/: default.yaml  development.yaml  example.user.yaml  production.yaml
inmuebles/calendarios/semana_01/: plan.csv  plan.ics  plan.json  plan.md
inmuebles/lotes/chacra-canuelas-5ha/: resumen.json
inmuebles/lotes/chacra-canuelas-5ha/carruseles/country_etapa/: caption_instagram.txt  carrusel.json  carrusel.md
inmuebles/lotes/chacra-canuelas-5ha/carruseles/country_etapa_chacra-canuelas-5ha_sem01_martes/: caption_instagram.txt  carrusel.json  carrusel.md
inmuebles/lotes/chacra-canuelas-5ha/carruseles/etapas_construccion_demo/: caption_instagram.txt  carrusel.json  carrusel.md
inmuebles/lotes/chacra-canuelas-5ha/carruseles/llave_en_mano_demo/: caption_instagram.txt  carrusel.json  carrusel.md
inmuebles/lotes/chacra-canuelas-5ha/carruseles/lote_premium/: caption_instagram.txt  carrusel.json  carrusel.md
inmuebles/lotes/chacra-canuelas-5ha/carruseles/lote_premium_chacra-canuelas-5ha_sem01_viernes/: caption_instagram.txt  carrusel.json  carrusel.md
inmuebles/lotes/chacra-canuelas-5ha/posts/: post_01_venta_emotivo.json  post_02_inversion.json  post_03_premium.json  post_etapas_obra.json  post_garantia_postventa.json  post_obra_terminada_entrega.json  post_plazo_construccion.json  post_presupuesto_obra.json  post_steel_frame_vs_tradicional.json  venta_chacra_canuelas.json
inmuebles/lotes/chacra-canuelas-5ha/prompts/: 01_chacra_atardecer.json  02_vista_aerea_loteo.json  03_amanecer_pampa.json  04_tranquera_entrada.json  05_molino_tanque.json  06_render_proyecto.json
inmuebles/lotes/chacra-canuelas-5ha/variantes/: variantes_lote_venta_20260710_171145.json  variantes_lote_venta_20260710_171145.txt  variantes_lote_venta_20260710_171301.json  variantes_lote_venta_20260710_171301.txt  variantes_lote_venta_20260710_171325.json  variantes_lote_venta_20260710_171325.txt  variantes_lote_venta_20260710_171354.json  variantes_lote_venta_20260710_171354.txt
inmuebles/lotes/test-proyecto/posts/: test_post.json
inmuebles/obras/chacra-canuelas-5ha/antes_despues/: antes_despues.json  antes_despues.md  caption_instagram.txt
inmuebles/outputs/: chacra_canuelas_5ha.json
inmuebles/pipelines/: pipeline_semana_01_20260710_164940.json  pipeline_semana_01_20260710_165753.json
inmuebles/posts/: demo_tulum.json  test_post.json
inmuebles/servicios/carruseles/servicios/: caption_instagram.txt  carrusel.json  carrusel.md
manual/: 01-vision-y-alcance.md  02-arquitectura.md  03-instalacion.md  04-casos-de-uso.md  05-modulos.md  06-comandos-cli.md  07-flujos-end-to-end.md  08-publicacion-instagram.md  09-limitaciones-y-workarounds.md  10-personalizacion.md
tests/: conftest.py  test_antes_despues.py  test_app_config.py  test_app_logging.py  test_calendario_editorial.py  test_caption_variants.py  test_carruseles.py  test_cerebro.py  test_cloudinary_upload.py  test_email.py  test_email_notifier.py  test_generation.py  test_historial_publicaciones.py  test_image_gen.py  test_image_generator.py  test_instagram_auth.py  test_instagram_publisher.py  test_mejora_fotos.py  test_mejora_fotos_ext.py  test_mercadolibre.py  test_mercadolibre_publisher.py  test_preview_html.py  test_publishers.py  test_publishing.py  test_realestate_studio.py  test_studio.py  test_studio_cli.py  test_studio_orchestrator.py  test_validators.py  test_zonaprop.py  test_zonaprop_publisher.py
(+64 files in other folders)
